--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "framer-motion": "^6.5.1",
+    "prettier": "^2.8.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
